--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇨🇦 加拿大-573.6KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-4.26MB/s(Youtube:不良林), server: hk-hkg-sh-hk-02-tr.cdn.savoy.click, port: 21089, type: trojan, password: uDTmEAGwuCUZXZvwhWJk, sni: hk-hkg-sh-hk-02-tr.cdn.savoy.click, skip-cert-verify: true}
-  - {name: 未知国家-353.7KB/s(Youtube:不良林), server: us-lax-ctg-01-tr.cdn.savoy.click, port: 889, type: trojan, password: uDTmEAGwuCUZXZvwhWJk, sni: us-lax-ctg-01-tr.cdn.savoy.click, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-342.8KB/s(Youtube:不良林), server: cngdcs4.langtg.xyz, port: 560, type: ssr, cipher: chacha20-ietf, password: mblank1port, protocol: auth_aes128_md5, obfs: plain, protocol-param: 2634:vFr9Fx23xZR(1), obfs-param: ""}
-  - {name: 🇨🇳 中国-697.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-556.2KB/s(Youtube:不良林), server: keixai3u.nodeinfo.icu, port: 6005, type: ssr, cipher: chacha20-ietf, password: di15PV, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: 230571:s8eJmL, obfs-param: MzRkZjAyMzA1NzEud3d3Lmdvdi5oaw}
-  - {name: 🇨🇳 中国-864.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-260.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-291.4KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇨🇳 中国-359.9KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇨🇳 中国-212.5KB/s(Youtube:不良林), server: 36.134.156.5, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-290.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-602.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.95MB/s(Youtube:不良林), server: node-tw-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-tw-c-01.texo.network, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-641.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-739.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇦 加拿大-573.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 未知国家-353.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-342.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-556.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-864.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-291.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-290.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-602.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-641.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-739.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇨🇦 加拿大-573.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 未知国家-353.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-342.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-556.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-864.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-291.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-290.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-602.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-641.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-739.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,19 +53,20 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇦 加拿大-573.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 未知国家-353.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-342.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-556.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-864.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-291.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-290.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-602.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-641.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-739.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
@@ -73,30 +74,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇨🇦 加拿大-573.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 未知国家-353.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-342.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-556.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-864.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-291.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-290.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-602.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-641.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-739.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇨🇦 加拿大-573.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 未知国家-353.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-342.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-556.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-864.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-291.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-290.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-602.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-641.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-739.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -104,15 +105,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇦 加拿大-573.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 未知国家-353.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-342.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-556.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-864.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-291.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-290.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-602.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-641.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-739.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,15 +130,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇦 加拿大-573.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 未知国家-353.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-342.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-556.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-864.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-291.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-290.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-602.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-641.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-739.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
