--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-573.6KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-260.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-291.4KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-379.8KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
   - {name: 🇨🇳 中国-359.9KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-246.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-212.5KB/s(Youtube:不良林), server: 36.134.156.5, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-290.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-602.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-1.95MB/s(Youtube:不良林), server: node-tw-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-tw-c-01.texo.network, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-641.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-739.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-411.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-249.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-217.1KB/s(Youtube:不良林), server: 36.134.156.5, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-257.7KB/s(Youtube:不良林), server: 120.240.55.137, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: 120.240.55.137}}
+  - {name: 🇨🇳 中国-489.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-447.2KB/s(Youtube:不良林), server: hk-hkg-it2-svm-tr.node.inforun.work, port: 13889, type: trojan, password: uDTmEAGwuCUZXZvwhWJk, sni: hk-hkg-it2-svm-tr.node.inforun.work, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-573.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-290.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-602.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-641.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-739.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-249.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-573.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-290.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-602.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-641.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-739.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-249.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-573.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-290.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-602.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-641.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-739.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-249.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-573.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-290.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-602.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-641.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-739.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-249.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-573.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-290.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-602.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-641.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-739.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-249.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-573.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-290.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-602.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-641.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-739.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-249.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-573.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-290.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-602.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-641.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-739.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-249.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
